// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ooth no session connect method after login can connect another strategy 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 1,
  },
  "test2": Object {
    "baz": 45,
  },
}
`;

exports[`ooth no session connect method after login can log in again 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 2,
  },
}
`;

exports[`ooth no session connect method after login can log in with other strategy 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 1,
  },
  "test2": Object {},
}
`;

exports[`ooth no session connect method can log in 1`] = `
Object {
  "user": Object {
    "_id": "<obfuscated>",
    "test": Object {
      "foo": 1,
    },
  },
}
`;

exports[`ooth no session connect method can register 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 1,
  },
}
`;

exports[`ooth no session methods fails with requireLogged 1`] = `
Object {
  "message": "Not logged in",
  "status": "error",
}
`;

exports[`ooth no session methods handle async errors 1`] = `
Object {
  "message": "Error message.",
  "status": "error",
}
`;

exports[`ooth no session methods handle errors 1`] = `
Object {
  "message": "Error message.",
  "status": "error",
}
`;

exports[`ooth no session methods handle method 1`] = `
Object {
  "message": "hi",
}
`;

exports[`ooth no session methods translates error 1`] = `
Object {
  "message": "French not logged",
  "status": "error",
}
`;

exports[`ooth session methods can do secondary auth with cookies 1`] = `
Object {
  "_id": "<obfuscated>",
  "foo": Object {
    "x": 1,
  },
}
`;

exports[`ooth session methods can do secondary auth with cookies 2`] = `
Object {
  "_id": "<obfuscated>",
  "foo": Object {
    "x": 1,
  },
}
`;

exports[`ooth session methods can log out 1`] = `
Object {
  "_id": "<obfuscated>",
  "foo": Object {
    "x": 1,
  },
}
`;

exports[`ooth session methods can log out 2`] = `Object {}`;

exports[`ooth session methods can log out 3`] = `
Object {
  "message": "Not logged in",
  "status": "error",
}
`;

exports[`ooth session methods fails without cookies 1`] = `
Object {
  "message": "Not logged in",
  "status": "error",
}
`;
